# teleport

./: .drone.yml  .eslintignore  .gitattributes  .gitmodules  Cargo.toml  babel.config.js  buf-go.gen.yaml  constants.go  darwin-signing.mk  devbox.json  e_imports.go  go.mod  go.sum  jest.config.js  package.json  tsconfig.json  webassets_embed.go  webassets_embed_ent.go  webassets_noembed.go
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: assign.yaml  aws-e2e-tests-non-root.yaml  bloat.yaml  build-centos7-assets.yaml  build-ci-buildbox-images.yaml  build-ci-service-images.yaml  build-macos-bypass.yaml  build-usage-image.yaml  check-devbox.yaml  check-merge-queue.yaml  doc-tests.yaml  e2e-tests.yaml  flaky-tests.yaml  integration-tests-non-root.yaml  integration-tests-root.yaml  kube-integration-tests-non-root.yaml  label.yaml  lint-bypass.yaml  lint-ui.yaml  lint.yaml  os-compatibility-test.yaml  post-release.yaml  terraform-lint.yaml  trivy.yaml  unit-tests-code.yaml  unit-tests-helm.yaml  unit-tests-integrations.yaml  unit-tests-rust.yaml  unit-tests-ui.yaml  update-ami-ids.yaml
api/: go.mod  go.sum
api/identityfile/: identityfile.go
api/metadata/: metadata.go
api/mfa/: mfa.go
api/profile/: profile.go
api/types/: access_request.go  accountrecovery.go  app.go  appserver.go  appserver_or_saml_idp_sp.go  appserver_or_saml_idp_sp_test.go  appserver_test.go  assertion_info.go  audit.go  (+6 more)
dronegen/: buildbox.go  drone_cli.go  gha.go  mac_gha.go  os_repos.go  promote.go  tag.go
e2e/: package.json
lib/srv/desktop/rdp/rdpclient/: Cargo.toml
(+78 files in other folders)
