[package]
name = "rdp-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "2.8.0"
boring = { version = "3.1.0", optional = true }
byteorder = "1.5.0"
bytes = "1.9.0"
env_logger = "0.11.6"
ironrdp-cliprdr.workspace = true
ironrdp-connector.workspace = true
ironrdp-pdu.workspace = true
ironrdp-rdpdr.workspace = true
ironrdp-rdpsnd.workspace = true
ironrdp-session.workspace = true
ironrdp-svc.workspace = true
ironrdp-tls.workspace = true
ironrdp-tokio.workspace = true
iso7816 = "0.1.3"
iso7816-tlv = "0.4.4"
libc = "0.2.169"
log = "0.4.25"
num-derive = "0.4.2"
num-traits = "0.2.19"
parking_lot = "0.12.3"
png = "0.17.16"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.9.0"
rsa = "0.9.7"
sspi = { git = "https://github.com/Devolutions/sspi-rs", rev="d54bdfcafa0e10d9d78224ebacc4f2a0992a6b79", features = ["network_client"] }
static_init = "1.0.3"
tokio = { version = "1.43", features = ["full"] }
tokio-boring = { version = "3.1.0", optional = true }
utf16string = "0.2.0"
uuid = { version = "1.12.1", features = ["v4"] }
x509-parser = "0.17"

[build-dependencies]
cbindgen = "0.28.0"
tempfile = "3.10.1"

[features]
fips = ["tokio-boring/fips", "boring/fips"]
